[package]
edition = "2021"
name = "scanner"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
sugarcube_scanner = { path = "../sugarcube_scanner" }
rayon = "1.10.0"

[build-dependencies]
napi-build = "2.1.6"
